@@ -506,7 +506,11 @@ int php_oci_statement_execute(php_oci_statement *statement, ub4 mode TSRMLS_DC)
 
 			/* find a user-setted define */
 			if (statement->defines) {
-				zend_hash_find(statement->defines,outcol->name,outcol->name_len,(void **) &outcol->define);
+				if (zend_hash_find(statement->defines,outcol->name,outcol->name_len,(void **) &outcol->define) == SUCCESS) {
+					if (outcol->define->type) {
+						outcol->data_type = outcol->define->type;
+					}
+				}
 			}
 
 			buf = 0;
